# odyssey

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  FLEET.md  distribution.toml
canary/: 1.2.0-canary.1.json
css/: components.css  font.css  motion.css  profile.css  tokens.css
examples/: gallery.html  gallery.rs
js/: canary.js  motion.js  spark.js  wire.js
labs/beacon-two-faces/: README.md  SPEC.md  index.html  operator.html  public.html
labs/beacon-two-faces/assets/: lab-dna.css  lab-operator.css  lab-public.css
labs/beacon-two-faces/fixtures/: operator-checks.fixture.json  (+1 more)
labs/sanctum-vault-ledger/: README.md  SPEC.md  index.html  secret.html
releases/1.1/: odyssey.css  odyssey.js
releases/1.2/: odyssey-font.css  odyssey.css  odyssey.js
releases/1.3/: odyssey.css  odyssey.js
server/: Cargo.toml
server/src/: main.rs
site/: actions.html  data-display.html  feedback.html  forms.html  getting-started.html  index.html  layout.html  navigation.html  overlays.html  tokens.html  typography.html
site/assets/: site.css  site.js
src/: controls.rs  data.rs  feedback.rs  html.rs  icons.rs  identity.rs  lib.rs  profile.rs  shell.rs  theme.rs
src/i18n/: en.rs  ja.rs  mod.rs  zh.rs
tools/: build-public-dist.sh  install-canary-gate.sh  odyssey-gate-browser.mjs  odyssey-gate.mjs
tools/browser-runtime/: package.json
tools/odysseyctl/: Cargo.toml
tools/systemd/: odyssey-canary-browser.service  odyssey-canary-browser.timer  odyssey-canary.conf  odyssey-canary.service  odyssey-canary.timer
tools/tests/: odyssey-gate.test.mjs
(+12 files in other folders)
