[package]
name = "odyssey-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
odyssey = { path = ".." }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
